[gd_scene load_steps=8 format=3 uid="uid://yo2i6m45rom8"]

[ext_resource type="Script" uid="uid://c5l748hujocai" path="res://SCRIPT/PANELES.gd" id="1_unuhw"]
[ext_resource type="Texture2D" uid="uid://rfrct7g6on3i" path="res://ASSET/Pokemon_Center_Exterior.png" id="2_m3bc2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ahi4q"]
texture = ExtResource("2_m3bc2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_quhiq"]
texture = ExtResource("2_m3bc2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3n73y"]
texture = ExtResource("2_m3bc2")
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m3bc2"]
texture = ExtResource("2_m3bc2")

[sub_resource type="Theme" id="Theme_unuhw"]
default_font_size = 40

[node name="PANELES" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_unuhw")

[node name="PanelEquipo" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelEquipo"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 60
text = "
EQUIPO
"
horizontal_alignment = 1

[node name="Panel" type="ScrollContainer" parent="PanelEquipo"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="PanelEquipo/Panel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="PanelPC" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelPC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 60
text = "
PC"
horizontal_alignment = 1

[node name="busquedaPC" type="LineEdit" parent="PanelPC"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
placeholder_text = "Buscar Pokémon en PC..."

[node name="ScrollContainer" type="ScrollContainer" parent="PanelPC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="PanelPC/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="PanelCaptura" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelCaptura"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 60
text = "
CAPTURA"
horizontal_alignment = 1

[node name="BarraBusqueda" type="LineEdit" parent="PanelCaptura"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
placeholder_text = "Buscar Pokémon..."

[node name="ScrollContainer" type="ScrollContainer" parent="PanelCaptura"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="PanelCaptura/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="PANEL_CONTROL" type="Control" parent="."]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
size_flags_horizontal = 3

[node name="CENTRO_POKEMON" type="Button" parent="PANEL_CONTROL"]
layout_mode = 0
offset_left = 471.0
offset_top = 9.0
offset_right = 597.0
offset_bottom = 123.0
theme_override_styles/disabled = SubResource("StyleBoxTexture_ahi4q")
theme_override_styles/hover = SubResource("StyleBoxTexture_quhiq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3n73y")
theme_override_styles/normal = SubResource("StyleBoxTexture_m3bc2")

[node name="CONFIRMAR_CURACION" type="ConfirmationDialog" parent="PANEL_CONTROL"]
size = Vector2i(274, 100)
borderless = true
ok_button_text = " SI "
dialog_text = "¿QUIERES CURAR TUS POKEMON?"
cancel_button_text = "NO"

[node name="PANEL_VACIO" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3

[node name="BarraNavegacion" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="BtnEquipo" type="Button" parent="BarraNavegacion"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 80
text = "EQUIPO"

[node name="BtnPC" type="Button" parent="BarraNavegacion"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 80
text = "PC"

[node name="BtnCaptura" type="Button" parent="BarraNavegacion"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 80
text = "CAPTURA"

[node name="CONFIRMACION" type="ConfirmationDialog" parent="."]
title = "CONFIRMA"
size = Vector2i(500, 390)
borderless = true
theme = SubResource("Theme_unuhw")
ok_button_text = "   SI   "
cancel_button_text = " NO "

[node name="ListaEquipo" type="PopupMenu" parent="."]
theme_override_font_sizes/font_size = 40

[node name="PopupTarjetaPokemon" type="Window" parent="."]
size = Vector2i(1000, 1000)
visible = false
borderless = true

[node name="ContenedorTarjeta" type="VBoxContainer" parent="PopupTarjetaPokemon"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BTNGUARDARPOPUP" type="Button" parent="PopupTarjetaPokemon"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -190.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 60
text = "GUARDAR"

[node name="BtnCerrarPopup" type="Button" parent="PopupTarjetaPokemon"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 60
text = "CERRAR"

[node name="ALERT_GUARDADO" type="AcceptDialog" parent="PopupTarjetaPokemon"]
title = ""
size = Vector2i(100, 285)
borderless = true

[connection signal="confirmed" from="CONFIRMACION" to="." method="_on_confirmation_dialog_confirmed"]
